# IronswornCompanionBot

./: .dockerignore  .gitignore  .golangci.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README-mix.md  README.md  fly.toml  go.mod  go.sum  mix.exs  package-lock.json  package.json  pkg.go  shadow-cljs.edn
.github/: CODEOWNERS
.github/workflows/: fly.yml
app/: app.go  bot.go  command_action_theme.go  command_ask_the_oracle.go  command_ask_the_oracle_callback.go  command_aspect_focus.go  command_challenge_rank.go  command_combat_action.go  command_major_plot_twist.go  command_make_npc.go  command_mystic_backlash.go  command_roll.go  command_roll_test.go  command_start.go  dispatcher.go  updater.go
cmd/companion/: main.go
config/: config.exs  config.go  prod.exs
core/actions/: actions.go
core/model/: action.go  action_test.go  model.go  model_test.go  odds.go  odds_test.go  service_dice.go  service_oracles.go
core/model/oracles/: oracles.go
ironsworn-companion/: Cargo.toml  Makefile
ironsworn-companion/src/: dice.rs  handler_env.rs  handlers.rs  main.rs  utl.rs
lib/: icb.ex
lib/icb/: application.ex  oracles.ex  polling_handler.ex
lib/icb/chains/: action_theme.ex  (+18 more)
oracle_loader/: Cargo.toml
oracle_loader/src/: ironsworn_move_oracles.json  ironsworn_move_oracles.rs  ironsworn_moves.rs  ironsworn_oracles_names.rs  ironsworn_oracles_prompts.rs  ironsworn_oracles_settlement.rs  ironsworn_oracles_turning_point.rs  lib.rs
oracles/: Cargo.toml
oracles/src/: lib.rs
prelude/: logger.go
project-journal/: 1-bot-commands
test/: icb_test.exs
(+25 files in other folders)
