[package]
name = "ironsworn-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
log = "0.4.17"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.28.1", features = ["rt-multi-thread", "macros"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
oracles = { path = "../oracles" }
